<resources>
    <string name="app_name">Retail Business</string>
    <string name="action_settings">Settings</string>

    <string name="menu_stock">Stock</string>
    <string name="menu_cash">Cash Flow</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_logout">Logout</string>

    <string-array name="questions">
        <item>Select a reset question</item>
        <item>What is your middle name?</item>
        <item>Where do you stay?</item>
        <item>What is your spouse name?</item>
        <item>What is your favorite color?</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product name</string>
    <string name="price">K0</string>
    <string name="remove">remove</string>
    <string name="point_of_sale">Point Of Sale</string>
    <string name="products">Products</string>
    <string name="scan">Scan</string>
    <string name="_123456789569877">123456789569877</string>
    <string name="add">Add</string>
</resources>