<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg3"
    tools:context=".fragments.POS">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:gravity="center"
                    android:text="@string/point_of_sale"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/white"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/barCodePOS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/barCodePOS"
                    android:hint="Barcode"
                    android:singleLine="true"
                    android:background="@drawable/bg_white"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnScanPOS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="2dp"
                    android:text="@string/scan"
                    android:background="@drawable/bg_black"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAddPOS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/add"
                    android:background="@drawable/bg_black"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white"
                    android:layout_marginTop="30dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/products"
                    android:textColor="@color/white"
                    android:layout_alignParentStart="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10dp"
                    android:text="K0.00"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:textSize="18sp" />

            </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_purchased_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
    </RelativeLayout>
</FrameLayout>